# conversationBot

./: .gitignore  CMakeLists.txt  README.md
conversationClient/: .gitignore  CMakeLists.txt
conversationClient/headers/: AbstractClient.h  AudioHandler.h  AudioPacket.h  AudioType.h  CameraClient.h  CameraHandler.h  ClientIdentifier.h  ConversationBot.h  ConversationClient.h  IAudioFilter.h  ServerAuthResponseHeader.h  ServerConversationHeader.h  ServerImageControlHeader.h  ServerInfo.h  SilenceFilter.h
conversationClient/src/: AbstractClient.cpp  AudioHandler.cpp  CameraClient.cpp  CameraHandler.cpp  ClientIdentifier.cpp  ConversationBot.cpp  ConversationClient.cpp  SilenceFilter.cpp  main.cpp
conversationServer/: .gitignore  CMakeLists.txt  schema.sql  server_config.json
conversationServer/headers/: AbstractServer.h  AudioPacket.h  Client.h  ClientAuthHeader.h  ClientHeader.h  ClientImageHeader.h  ClientLogger.h  ClientRegistry.h  ConversationServer.h  ConversationSession.h  ImageServer.h  LLMGateway.h  LanguageValidator.h  ServerAuthResponseHeader.h  ServerHandler.h  ServerHeader.h  ServerImageControlHeader.h  ServerInfo.h  ServerManager.h  ServerSocket.h  ServerType.h  SharedContext.h  SpeechToTextConverter.h  TextToSpeechConverter.h
conversationServer/src/: AbstractServer.cpp  Client.cpp  ClientLogger.cpp  ClientRegistry.cpp  ConversationServer.cpp  ConversationSession.cpp  ImageServer.cpp  LLMGateway.cpp  LanguageValidator.cpp  ServerHandler.cpp  ServerManager.cpp  ServerSocket.cpp  SpeechToTextConverter.cpp  TextToSpeechConverter.cpp  main.cpp
frontend/frontend/: jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/frontend/src/: App.svelte  app.css
frontend/frontend/src/components/: MainContent.svelte  SideBar.svelte
frontend/frontend/src/lib/components/ui/card/: card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
frontend/frontend/src/lib/components/ui/switch/: switch.svelte
headers/: AudioHandler.h  ConversationBot.h  ConversationClient.h  IAudioFilter.h  SilenceFilter.h
src/: AudioHandler.cpp  ConversationBot.cpp  ConversationClient.cpp  SilenceFilter.cpp  main.cpp
